# PyTUI_Kairo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.json  kairo  kairo.py  main.py  pyproject.toml  run.bat
agent/: __init__.py  bootstrap.py  cancellation.py  commands.py  config.py  config_editor.py  config_migration.py  context_manager.py  core.py  interaction.py  llm.py  message_packer.py  plain_io.py  profile_resolver.py  provider_health.py  provider_registry.py  provider_templates.py  repl.py  runtime_commands.py  session_store.py  token_tracker.py  tui_widgets.py  workspace.py  workspace_context.py
agent/ui/: __init__.py  app.py  events.py  mascot.py  widgets.py  windows_keys.py
docs/: architecture.md  commands.md  configuration.md  developer-guide.md  index.md  troubleshooting.md  user-guide.md
docs/en/: index.md  user-manual.md
tests/: __init__.py  harness.py  test_0_2_5_features.py  test_bootstrap.py  test_commands.py  test_config.py  test_config_editor.py  test_context_manager.py  test_kairo_ui.py  test_llm_transport.py  test_message_packer.py  test_model_switching.py  test_provider_health.py  test_provider_key_preservation.py  test_provider_templates.py  test_repl.py  test_runtime_config_commands.py  test_security.py  test_session_management_commands.py  test_session_store.py  test_settings_ui.py  test_stop_generation.py  test_tools.py  test_tracker.py  test_widgets.py  test_workspace.py  test_workspace_hot_switch.py
tools/: __init__.py  base.py  file_ops.py  patch_ops.py  policy.py  shell.py  web.py
(+2 files in other folders)
