[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo-agent"
version = "0.2.0"
description = "Kairo, an animated terminal-native coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.2.0",
    "textual>=8.2.7",
]

[project.scripts]
kairo = "kairo:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "textual-dev>=1.5.0",
]

[tool.setuptools]
py-modules = ["kairo", "main"]

[tool.setuptools.packages.find]
include = ["agent*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^.venv/",
    "^.git/",
]
